inicia cadastro grupo

--- a/src/view/alterar-grupo.ejs
+++ b/src/view/alterar-grupo.ejs
@@ -7,13 +7,13 @@
 
     <%- include('includes/navbar') %>
 
-    <h1>Alterar filme</h1>
+    <h1>Alterar grupo</h1>
 
-    <form action="/filmes/alterar/<%= filme.id %>" method="POST">
-        <!-- <input type="hidden" name="id" value="<%= filme.id %>" -->
+    <form action="/grupos/alterar/<%= grupo.id %>" method="POST">
+        <!-- <input type="hidden" name="id" value="<%= grupo.id %>" -->
         
         <label for="nome">Nome</label>
-        <input type="text" name="nome" value="<%= filme.nome %>">
+        <input type="text" name="nome" value="<%= grupo.nome %>">
         <br /><br />
 
         <label for="genero">Genero</label>
