--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,7 +35,7 @@ header a:hover {
     color: #04AA6D;
 }
 
-#filmes {
+#grupos {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 80%;
@@ -43,16 +43,16 @@ header a:hover {
     margin-top: 40px;
   }
   
-  #filmes td, #filmes th {
+  #grupos td, #grupos th {
     border: 1px solid #ddd;
     padding: 8px;
   }
   
-  #filmes tr:nth-child(even){background-color: #f2f2f2;}
+  #grupos tr:nth-child(even){background-color: #f2f2f2;}
   
-  #filmes tr:hover {background-color: #ddd;}
+  #grupos tr:hover {background-color: #ddd;}
   
-  #filmes th {
+  #grupos th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
