--- a/src/view/detalhar.ejs
+++ b/src/view/detalhar.ejs
@@ -7,15 +7,15 @@
 
     <%- include('includes/navbar') %>    
 
-    <h1>Filme <%= filme.nome %></h1>
-    <h2>Genero <%= filme.genero %></h2>
+    <h1>grupo <%= grupo.nome %></h1>
+    <h2>Genero <%= grupo.genero %></h2>
     
-    <h3>Lançado em: <%= filme.lancamento %></h3>
+    <h3>Lançado em: <%= grupo.lancamento %></h3>
 
-    <p><%= filme.sinopse %></p>
+    <p><%= grupo.sinopse %></p>
 
-    <a href="/filmes/alterar/<%= filme.id %>">ALTERAR</a>
+    <a href="/grupos/alterar/<%= grupo.id %>">ALTERAR</a>
     <br/><br/>
-    <a href="/filmes/deletar/<%= filme.id %>">DELETAR</a>
+    <a href="/grupos/deletar/<%= grupo.id %>">DELETAR</a>
 </body>
 </html>
