--- a/src/view/includes/navbar.ejs
+++ b/src/view/includes/navbar.ejs
@@ -2,9 +2,9 @@
     <h1 id="nav-title">IFLIX</h1>
     <nav>
         <ul>
-            <li><a href="/filmes">FILMES</a></li>
+            <li><a href="/grupos">grupos</a></li>
             <li><a href="/login.html">LOGIN</a></li>
-            <li><a href="/filmes/cadastrar">CADASTRAR</a></li>
+            <li><a href="/grupos/cadastrar">CADASTRAR</a></li>
         </ul>
     </nav>
 </header>
