--- a/src/view/includes/navbar.ejs
+++ b/src/view/includes/navbar.ejs
@@ -1,5 +1,5 @@
 <header>
-    <h1 id="nav-title">IFLIX</h1>
+    <h1 id="nav-title">chatXx</h1>
     <nav>
         <ul>
             <li><a href="/grupos">grupos</a></li>
