--- a/src/view/listagem.ejs
+++ b/src/view/listagem.ejs
@@ -15,19 +15,13 @@
 
     <table id="grupos">
         <tr>
-          <th>ID</th>
           <th>Nome</th>
           <th>quantidade</th>
+          <th>Detalhes</th>
         </tr>
-        <tr>
-          <td>AAA</td>
-          <td>TESTE AAA</td>
-          <td>13</td>
-          <td>Ver detalhes</td>
-        </tr>
+       
         <% grupos.forEach(grupo => { %>
           <tr>
-            <td><%= grupo.id %></td>
             <td><%= grupo.nome %></td>
               <td><%= grupo.quantidade %></td>
 
