--- a/src/view/includes/navbar.ejs
+++ b/src/view/includes/navbar.ejs
@@ -1,10 +1,10 @@
 <header>
-    <h1 id="nav-title">chatXx</h1>
+    <h1 id="nav-title">WhatsApp 2</h1>
     <nav>
         <ul>
-            <li><a href="/grupos">grupos</a></li>
-            <li><a href="/login.html">LOGIN</a></li>
-            <li><a href="/grupos/cadastrar">CADASTRAR</a></li>
+            <li><a href="/grupos">Menu</a></li>
+            <li><a href="/login.html">Login</a></li>
+            <li><a href="/grupos/cadastrar">Criar Grupo</a></li>
         </ul>
     </nav>
 </header>
