--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 /* Global */
 * {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica;
+
+font-family: 'Outfit', sans-serif;
 }
 
 /* Header */
@@ -41,21 +41,69 @@ header a:hover {
     width: 80%;
     margin: auto;
     margin-top: 40px;
-  }
-  
-  #grupos td, #grupos th {
+}
+
+#grupos td,
+#grupos th {
     border: 1px solid #ddd;
     padding: 8px;
-  }
-  
-  #grupos tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #grupos tr:hover {background-color: #ddd;}
-  
-  #grupos th {
+}
+
+#grupos tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#grupos tr:hover {
+    background-color: #ddd;
+}
+
+#grupos th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: #04AA6D;
     color: white;
-  }
+}
+
+.menu {
+    width: 40%;
+    float: left;
+}
+
+.main {
+    background-color: rgba(231, 231, 231, 0.747);
+    width: 60%;
+    float: left;
+}
+
+.quadrado {
+    margin-right: 20%;
+    margin-left: 20%;
+
+    width: -moz-fit-content;
+    display: inline-block;
+    width: fit-content;
+    margin-bottom: 10px;
+    border-radius: 17px;
+    position: relative;
+    align-self: flex-start;
+}
+
+p {
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 0 auto
+}
+
+input[type=text] {
+
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+.container1 {
+    margin-left: 5%;
+}
