sair do grupo, quantidade e ver limitado

--- a/src/view/listagem.ejs
+++ b/src/view/listagem.ejs
@@ -6,18 +6,19 @@
 <body>
 
     <%- include('includes/navbar') %>    
-
+    <center>
+  <h1>Marina Fernandes</h1>
     <% if (user) { %>
-      <h1>Bem vind@ <%= user.nome %></h1>
+      <h2>Bem vind@ <%= user.nome %></h2>
     <% } %>
 
-    <h1>Lista de todos os grupos</h1>
-
+    <h2>Lista de todos os grupos</h2>
+</center>
     <table id="grupos">
         <tr>
           <th>Nome</th>
-          <th>quantidade</th>
-          <th>Detalhes</th>
+          <th>Membros</th>
+          <th></th>
         </tr>
        
         <% grupos.forEach(grupo => { %>
@@ -26,7 +27,9 @@
               <td><%= grupo.quantidade %></td>
 
             
-            <td> <a href="/grupos/<%= grupo.id %>"> Ver detalhes </a> </td>
+            <td> <a href="/grupos/<%= grupo.id %>"> Ver </a> </td>
+            <!-- <td> <a href="/grupos/<%= grupo.id %>/entrar"> Entrar </a> </td> -->
+
             <% }) %>
                   
                     </tr>
