--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 /* Global */
 * {
 
-font-family: 'Outfit', sans-serif;
+font-family: 'Roboto', sans-serif;
 }
 
 /* Header */
@@ -38,15 +38,16 @@ header a:hover {
 #grupos {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 80%;
+    width: 60%;
     margin: auto;
     margin-top: 40px;
+    
 }
 
 #grupos td,
 #grupos th {
-    border: 1px solid #ddd;
-    padding: 8px;
+ border: none;
+ padding: 8px;
 }
 
 #grupos tr:nth-child(even) {
@@ -61,7 +62,7 @@ header a:hover {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
+    background-color: #45c294;
     color: white;
 }
 
@@ -106,4 +107,8 @@ input[type=text] {
 
 .container1 {
     margin-left: 5%;
+}
+
+button{
+    padding: 12px 20px;
 }
