--- a/src/view/detalhar.ejs
+++ b/src/view/detalhar.ejs
@@ -42,6 +42,9 @@
                                         <%= membro.nome %> [<%= membro.tipo %>]
                                 </p>
                                 <% }) %>
+                                <br>
+                                <br>
+                                <a href="/grupos/deletar/<%= grupo.id %>"><button>Sair do grupo</button></a>
                         </div>
                         </div>
                         <div class="main">
@@ -80,10 +83,12 @@
 
                         <form action="/grupos/<%=grupo.id%>/addmensagem" method="post">
                         
-                                <input style="margin-left: 25%;" type="text" placeholder="Mensagem..." name="texto">
+                                <input style="margin-left: 20%;" type="text" placeholder="Mensagem..." name="texto">
                                 <button type="submit">Enviar</button>
                                 </form>
-                                                                                                <% } %>
+                                                                                                <% }else{ %>
+                                        <h3 style="margin-left: 35%; margin-right: 35%;">Você só pode vizualizar :(</h3>
+                                                                                                        <% } %>
                                 <% }) %>
 
                                 <br><br>
