--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,16 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 /* Global */
 * {
-
-font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+h1{
+    margin-bottom: 20px;
 }
 
+h2{
+    margin: 0 auto;
+}
+
+h6{
+    font-size: 15px;
+}
+img{
+    height: 25px;
+    width: 25px;
+}
+html,
+body {
+    height: 100%;
+    background-color: #efefef;
+        margin:0;
+
+}
 /* Header */
 header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 20px 50px;
+    padding: 10px 50px;
     box-shadow: 0 1px 8px #ddd;
 }
 
@@ -32,49 +52,73 @@ header a {
 }
 
 header a:hover {
-    color: #04AA6D;
+    color: rgb(214, 197, 44);
+}
+
+header h1{
+    color: rgb(163, 113, 197);
+    margin: 0;
+}
+header h1:hover {
+    color: rgb(214, 197, 44);
+}
+
+.numbers{
+    margin-left: 45%;
 }
 
 #grupos {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 60%;
+    border-spacing:0 5px !important;
+        border:none !important;
+
+    border-collapse:separate !important;
+    width: 50%;
     margin: auto;
-    margin-top: 40px;
+    /* border-spacing: 2px; */
     
 }
+
+#grupos tbody tr th:first-child, tbody tr td:first-child {
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+
+#grupos tr:hover td {
+    background-color: rgb(238, 225, 113);
+}
+#grupos td{
+    background-color: #fff;
+}
+
 
 #grupos td,
 #grupos th {
  border: none;
  padding: 8px;
+ padding: 20px;
 }
 
-#grupos tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-#grupos tr:hover {
-    background-color: #ddd;
-}
 
 #grupos th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #45c294;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .menu {
-    width: 40%;
+    width: 42%;
     float: left;
 }
 
 .main {
     background-color: rgba(231, 231, 231, 0.747);
-    width: 60%;
+    width: 58%;
     float: left;
+      min-height: 100%;
+      height: auto !important;
+      /*min-height hack*/
+      height: 100%;
 }
 
 .quadrado {
@@ -90,6 +134,11 @@ header a:hover {
     align-self: flex-start;
 }
 
+.membros p{
+    padding: 0;
+    margin: 0 auto;
+}
+
 p {
     padding-top: 10px;
     padding-left: 10px;
@@ -97,18 +146,22 @@ p {
     margin: 0 auto
 }
 
-input[type=text] {
+#send{
 
     width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
+    bottom: 0;
+    /* position: absolute; */
 }
 
 .container1 {
     margin-left: 5%;
 }
 
-button{
+#sendbutton{
     padding: 12px 20px;
+        bottom: 0;
+        /* position: absolute; */
 }
