--- a/src/view/detalhar.ejs
+++ b/src/view/detalhar.ejs
@@ -15,13 +15,7 @@
                         <h2>Adm: <%= grupo.adm %>
                         </h2>
                         <br>
-                    
-
-
-                 
-
-
-                                                        <% if (user.email==grupo.adm) { %>
+                        <% if (user.email==grupo.adm) { %>
 
                         <form action="/grupos/<%=grupo.id%>/add" method="post">
                                 <label for="email">Adicionar ao grupo</label>
@@ -37,22 +31,28 @@
                         <br>
                         <h2>Membros:</h2>
                         <% membros.forEach(membro=> { %>
-
-                                <p>
-                                        <%= membro.nome %> [<%= membro.tipo %>]
-                                </p>
+                        <table class="membros">
+                                <tr>
+                                <td style="padding-top: 5px;"><p><%= membro.nome %> [<%= membro.tipo %>]</p></td>
+                                <% if (membro.tipo !== 'adm'&&  user.email == grupo.adm) { %>
+                                <td><a href="/grupos/deletarmembro/<%= grupo.id %>/<%= membro.email %>"><img src="/images/bye.png"alt=""></a></td>
+                        <% } %>
+                        </tr>
+                                </table>
                                 <% }) %>
                                 <br>
                                 <br>
+                        <% if (user.email!==grupo.adm) { %>
+
                                 <a href="/grupos/deletar/<%= grupo.id %>"><button>Sair do grupo</button></a>
+                                <% } %>
                         </div>
                         </div>
                         <div class="main">
-                                  <!-- <h2 style="margin-left: 10%;">Mensagens:</h2> -->
-                               <br><br>
+                        <br><br>
                         <% mensagens.forEach(texto=> { %>
                                 <% if (user.nome == texto.nome) { %>
-                                <div class="quadrado" style="background-color: #45c294; margin-left: 20%; float: right; margin-right: 20%;   border-top-left-radius: 17; border-top-right-radius: 17; border-bottom-left-radius: 17; border-bottom-right-radius: 0;">
+                                <div class="quadrado" style="background-color: rgb(175, 121, 211); margin-left: 20%; float: right; margin-right: 20%;   border-top-left-radius: 17; border-top-right-radius: 17; border-bottom-left-radius: 17; border-bottom-right-radius: 0;">
 
                                         <p style="font-weight: bold; padding-top: 10px; padding-left: 10px; margin: 0 auto"><%= texto.nome %></p>
                                         
@@ -62,7 +62,7 @@
                                         <p style="font-size: 10px; position:absolute; padding-right: 10px; padding-bottom: 10px; bottom:0; right:0;"><%= texto.horario %></p>
                                 </div>
                                 <% } else { %>
-                                         <div class="quadrado" style="background-color: #a1ecd1; border-top-left-radius: 17; border-top-right-radius: 17; border-bottom-left-radius: 0; border-bottom-right-radius: 17;">
+                                        <div class="quadrado" style="background-color: #d0a1da; border-top-left-radius: 17; border-top-right-radius: 17; border-bottom-left-radius: 0; border-bottom-right-radius: 17;">
 
                                         <p style="font-weight: bold; padding-top: 10px; padding-left: 10px; margin: 0 auto"><%= texto.nome %></p>
                                         
@@ -72,31 +72,30 @@
                                         <p style="font-size: 10px; position:absolute; padding-right: 10px; padding-bottom: 10px; bottom:0; right:0;"><%= texto.horario %></p>
                                 </div>
                                                                 <% }  %>
-
                                 <% }) %>
                                 <br>
 
                                 <% pessoa.forEach(p=> { %>
 
                                 <% if (p.tipo === 'escritor' || user.email == grupo.adm) { %>
-
-
                         <form action="/grupos/<%=grupo.id%>/addmensagem" method="post">
                         
-                                <input style="margin-left: 20%;" type="text" placeholder="Mensagem..." name="texto">
-                                <button type="submit">Enviar</button>
+                                <input id="send" style="margin-left: 20%;" type="text" placeholder="Escreva algo..." name="texto">
+                                <button id="sendbutton" type="submit">Enviar</button>
                                 </form>
-                                                                                                <% }else{ %>
-                                        <h3 style="margin-left: 35%; margin-right: 35%;">Você só pode vizualizar :(</h3>
-                                                                                                        <% } %>
+                                <% }else{ %>
+                                <h3 style="margin-left: 35%; margin-right: 35%;">Você só pode vizualizar :(</h3>
+                                <% } %>
+                                <div class="numbers">
+                                <% for (page = 0;page < (total.length/10); page++ ) { %>
+                                <a href="/grupos/<%= grupo.id %>/page/<%= page*10 %>"><%= page+1 %></a>
+                                <% } %> 
+                                </div>
                                 <% }) %>
 
                                 <br><br>
 </div>
 
-                                        <!-- <a href="/grupos/alterar/<%= grupo.id %>">ALTERAR</a>
-                                        <br /><br />
-                                        <a href="/grupos/deletar/<%= grupo.id %>">DELETAR</a> -->
         </body>
 
 </html>
