--- a/src/view/includes/navbar.ejs
+++ b/src/view/includes/navbar.ejs
@@ -1,9 +1,14 @@
 <header>
-    <h1 id="nav-title">WhatsApp 2</h1>
+    <h1 id="nav-title" onclick="window.location='/'">Whatsapp 2</h1>
     <nav>
         <ul>
-            <li><a href="/grupos">Menu</a></li>
-            <li><a href="/login.html">Login</a></li>
+                <% if (user) { %>
+                    <li><%= user.nome %>
+                    </li>
+                    <% } %>
+                    <li><a href="/grupos">Menu</a></li>
+                    <li><a href="/grupos/meusgrupos">Meus grupos</a></li>
+            <li><a href="/users/login">Login</a></li>
             <li><a href="/grupos/cadastrar">Criar Grupo</a></li>
         </ul>
     </nav>
