--- a/src/view/cadastrar.ejs
+++ b/src/view/cadastrar.ejs
@@ -6,7 +6,7 @@
 <body>
 
     <%- include('includes/navbar') %>
-
+<center>
     <h1>Cadastro grupos</h1>
 
     <form action="/grupos" method="POST">
@@ -19,10 +19,8 @@
         <br /><br />        
 
     </form>
+</center>
 
-    <footer>
-        <p>Desenvolvido nas aulas do IFRS <3</p>
-    </footer>
 
 </body>
 </html>
